--- a/2.1 Deploy-Catalog-Portfolio-Product.ipynb
+++ b/2.1 Deploy-Catalog-Portfolio-Product.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1aaaca8f",
+   "id": "d1164e2b",
    "metadata": {},
    "source": [
     "# [모듈 2.1] 카탈로그 포트폴리오 및 프러덕트 배포\n",
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "30cecb9d",
+   "execution_count": 1,
+   "id": "8adcef07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d135f61a",
+   "id": "ba737812",
    "metadata": {},
    "source": [
     "# 1. 카탈로그 프트폴리오 및 프더덕트 CF 확인"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6828283b",
+   "id": "60a94d0d",
    "metadata": {},
    "source": [
     "## 1.1 실행할 CF YAML 파일 다운로드 "
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "31789d6f",
+   "execution_count": 2,
+   "id": "20e71fa5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-02-04 13:17:23       7210 sm-project-sc-portfolio.yaml\n",
-      "download: s3://sagemaker-ap-northeast-2-189546603447/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml to ./sm-project-sc-portfolio.yaml\n"
+      "2022-02-04 14:16:38       7210 sm-project-sc-portfolio.yaml\n",
+      "download: s3://sagemaker-ap-southeast-2-189546603447/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml to ./sm-project-sc-portfolio.yaml\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d39e3b97",
+   "id": "6fcb69e7",
    "metadata": {},
    "source": [
     "## 1.2 실행 결과의 Output 확인\n",
@@ -92,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "f3bf9edb",
+   "execution_count": 3,
+   "id": "fe5cba6b",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
       "    \u001b[94mDescription\u001b[39;49;00m: Name of the Amazon SageMaker execution role\n",
       "    \u001b[94mValue\u001b[39;49;00m:\n",
       "      Fn::Select:\n",
-      "      - 2\n",
+      "      - 1\n",
       "      - Fn::Split:\n",
       "        - /\n",
       "        - \u001b[94mRef\u001b[39;49;00m: SCPortfolioPrincipalRoleArn\n"
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9524754e",
+   "id": "6cd9ce20",
    "metadata": {},
    "source": [
     "## 1.2 CF 파라미터\n",
@@ -166,8 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "b4501b6d",
+   "execution_count": 4,
+   "id": "98a0c29d",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83805a65",
+   "id": "961882cf",
    "metadata": {},
    "source": [
     "## 1.2 CF 생성될 리소스\n",
@@ -204,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "1df484ad",
+   "execution_count": 5,
+   "id": "54290802",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
       "        \u001b[94mDescription\u001b[39;49;00m: SageMaker project to transform and ingest features into a feature\n",
       "          group\n",
       "        \u001b[94mInfo\u001b[39;49;00m:\n",
-      "          \u001b[94mLoadTemplateFromURL\u001b[39;49;00m: https://s3.amazonaws.com/sagemaker-ap-northeast-2-189546603447/amazon-sagemaker-reusable-components/project-s3-fs-ingestion.yaml\n",
+      "          \u001b[94mLoadTemplateFromURL\u001b[39;49;00m: https://s3.amazonaws.com/sagemaker-ap-southeast-2-189546603447/amazon-sagemaker-reusable-components/project-s3-fs-ingestion.yaml\n",
       "      \u001b[94mTags\u001b[39;49;00m:\n",
       "      - \u001b[94mKey\u001b[39;49;00m: sagemaker:studio-visibility\n",
       "        \u001b[94mValue\u001b[39;49;00m: \u001b[33m'\u001b[39;49;00m\u001b[33mtrue\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\n"
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5e30f5e",
+   "id": "1a986b2c",
    "metadata": {},
    "source": [
     "## 1.3 이외 CF 생성될 리소스\n",
@@ -259,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "64c530a6",
+   "execution_count": 6,
+   "id": "18555477",
    "metadata": {},
    "outputs": [
     {
@@ -386,15 +386,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "f9caf31a",
+   "execution_count": 7,
+   "id": "4dddad36",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "upload: ./sm-project-sc-portfolio.yaml to s3://sagemaker-ap-northeast-2-189546603447/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n"
+      "upload: ./sm-project-sc-portfolio.yaml to s3://sagemaker-ap-southeast-2-189546603447/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n"
      ]
     }
    ],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d17b1e10",
+   "id": "12610a60",
    "metadata": {},
    "source": [
     "# 2. AWS Service Catalog 제품 포트폴리오 배포\n",
@@ -424,8 +424,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "818e2f63",
+   "execution_count": 8,
+   "id": "8f1274a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,22 +436,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "85372d11",
+   "execution_count": 9,
+   "id": "080567a0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bucket_name : sagemaker-ap-northeast-2-189546603447\n",
+      "bucket_name : sagemaker-ap-southeast-2-189546603447\n",
       "stack_name : sm-project-sc-portfolio\n",
-      "Bucket Region : ap-northeast-2\n",
-      "SageMaker Studio Domain ID : d-hflleebdlsun\n",
+      "Bucket Region : ap-southeast-2\n",
+      "SageMaker Studio Domain ID : d-bqnj3arguz1d\n",
       "SageMaker Execution Role : arn:aws:iam::189546603447:role/MLOps-custom-template-gonsoomoon\n",
-      "CF File:  : https://s3.ap-northeast-2.amazonaws.com/sagemaker-ap-northeast-2-189546603447/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
+      "CF File:  : https://s3.ap-southeast-2.amazonaws.com/sagemaker-ap-southeast-2-189546603447/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
       "{\n",
-      "    \"StackId\": \"arn:aws:cloudformation:ap-northeast-2:189546603447:stack/sm-project-sc-portfolio/09a2a550-85bd-11ec-b6f4-028c03ca2672\"\n",
+      "    \"StackId\": \"arn:aws:cloudformation:ap-southeast-2:189546603447:stack/sm-project-sc-portfolio/082db950-8651-11ec-a081-0236e46e2510\"\n",
       "}\n"
      ]
     }
@@ -489,51 +489,74 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e4a8540",
+   "id": "2251a368",
    "metadata": {},
    "source": [
-    "# 4. Add permissions to Service Catalog launch and SageMaker execution IAM roles"
+    "## 2.1 클라우드 포메이션 진행 확인\n",
+    "\n",
+    "- 클라우드 포메이션의 콘솔로 가셔서 sm-project-sc-portfolio 가 성공적으로 끝났는지를 확인 합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb32e2a9",
+   "metadata": {},
+   "source": [
+    "![cf_deploy_portfolio.png](img2/cf_deploy_portfolio.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8853fe23",
+   "metadata": {},
+   "source": [
+    "## 2.2 서비스 카탈로그 및 프러덕트 생성 확인\n",
+    "- 서비스 카탈로그 콘솔로 이동하여 아래 처럼 생성이 되었는지를 확인 합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9acf897e",
+   "metadata": {},
+   "source": [
+    "![service_catalog.png](img2/service_catalog.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc2c3a40",
+   "metadata": {},
+   "source": [
+    "# 3. 서비스 카탈로그 런치 및 SageMaker 실행 IAM 역할에 권한 추가\n",
+    "\n",
+    "- AmazonSageMakerServiceCatalogProductsLaunchRole 에 권한 추가\n",
+    "    - AWS Service Catalog는 기본 [`AmazonSageMakerServiceCatalogProductsLaunchRole` IAM 역할](https://docs.aws.amazon.com/sagemaker/latest/dg/security-iam-awsmanpol-sc.html)을 사용하여 SageMaker 프로젝트와 함께 CloudFormation 템플릿을 시작합니다. 이 역할은 Studio 사용자에 대해 SageMaker 프로젝트를 활성화한 경우 SageMaker Studio를 프로비저닝하는 동안 자동으로 생성됩니다.\n",
+    "    - Feature Store 수집 제품을 SageMaker 프로젝트로 배포하려면 이 역할에 추가 권한이 필요합니다. 필요한 모든 권한은 [관리형 정책 리소스 `AmazonSageMakerServiceCatalogFSIngestionProductPolicy`](cfn-templates/sm-project-sc-portfolio.yaml)에 정의되어 있으며 이를 역할(`AmazonSageMakerServiceCatalogProductsLaunchRole`) 에 첨부해야 합니다.\n",
+    "    - 이는  SageMaker 프로젝트 배포를 시작하기 전에 해야 합니다.\n",
+    "\n",
+    "\n",
+    "- AmazonSageMakerExecutionRole 에 권한 추가\n",
+    "    - 예를 들어 [CloudFormation API](https://docs.aws.amazon.com/AWSCloudFormation/latest/APIReference/API_Operations.html)를 호출하여 제공된 노트북에서 일부 코드 셀을 실행하려면 SageMaker 실행 역할에 추가 권한이 필요합니다. 이러한 권한은 [관리형 정책 리소스 `AmazonSageMakerExecutionRolePolicy`](cfn-templates/sm-project-sc-portfolio.yaml)에 정의되어 있으며 SageMaker 실행 역할에 연결되어야 합니다.\n",
+    "\n",
+    "다음 명령을 실행하여 생성된 관리형 정책을 `AmazonSageMakerServiceCatalogProductsLaunchRole` 및 SageMaker 실행 IAM 역할에 연결합니다.\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "781d2e84",
+   "execution_count": null,
+   "id": "bfa9d339",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "! aws cloudformation describe-stacks \\\n",
-    "    --stack-name {SC_PORTFOLIO_STACK_NAME} \\\n",
-    "    --output text \\\n",
-    "    --query 'Stacks[0].Outputs[?OutputKey==`FSIngestionProductPolicyArn`].OutputValue'"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "e050dd9f",
+   "execution_count": null,
+   "id": "2fc01b4e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SM_SC_FS_INGESTION_POLICY_ARN : arn:aws:iam::057716757052:policy/sm-project-sc-portfolio-AmazonSageMakerServiceCatalogFSIngestionProductPolicy-1H4PBAVHSCZYK\n",
-      "\n",
-      "SM_EXECUTION_ROLE_POLICY_ARN : arn:aws:iam::057716757052:policy/sm-project-sc-portfolio-AmazonSageMakerExecutionRolePolicy-1GXCCW2EKN3U9\n",
-      "\n",
-      "SM_EXECUTION_ROLE_NAME : mlops-sagemaker-project-gsmoon\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sh -s \"{SC_PORTFOLIO_STACK_NAME}\" \n",
     "\n",
@@ -572,34 +595,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a849f0a6",
+   "id": "ff40f456",
+   "metadata": {},
+   "source": [
+    "# 4. 노트북 끝\n",
+    "- README 파일로 이동하시고, 아래는 트러블 슈팅시 참고 하세요."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dcf581a",
    "metadata": {},
    "source": [
     "# A. 트러블 슈팅 커맨드"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "1336d9ca",
+   "cell_type": "markdown",
+   "id": "8296a0a1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "download: s3://mlops-gonsoomoon-sydney/amazon-sagemaker-reusable-components/amazon-sagemaker-reusable-components.zip to ./amazon-sagemaker-reusable-components.zip\n"
-     ]
-    }
-   ],
    "source": [
-    "! aws s3 cp s3://mlops-gonsoomoon-sydney/amazon-sagemaker-reusable-components/amazon-sagemaker-reusable-components.zip ."
+    "## A.1 클라우드 포메이션 스택 진행 상황, 삭제 및 기타 명령어"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "43dafc6d",
+   "id": "2415e0b1",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -896,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "97489ec2",
+   "id": "9cab8ce4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,19 +927,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 121,
-   "id": "8026f286",
+   "cell_type": "markdown",
+   "id": "b1615544",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "! aws cloudformation delete-stack --stack-name {SC_PORTFOLIO_STACK_NAME}\n"
+    "## A.2 S3 CLI 관련 명령어"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "95d71396",
+   "id": "5f5211ac",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "9a46dda0",
+   "id": "3a9f8413",
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6c349265",
+   "id": "21a27683",
    "metadata": {},
    "outputs": [
     {
@@ -978,74 +998,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e54449ff",
+   "id": "22887cdd",
    "metadata": {},
    "source": [
-    "## 버킷의 오너십 변경 \n",
-    "- 오브젝트를 Write 한 계정 보다는 버켓 소유자에게 오너십을 변경 함"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "id": "e530dae4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import boto3\n",
-    "\n",
-    "client = boto3.client('s3')\n",
-    "\n",
-    "response = client.put_bucket_ownership_controls(\n",
-    "    Bucket= bucket,\n",
-    "    OwnershipControls={\n",
-    "        'Rules': [\n",
-    "            {\n",
-    "                'ObjectOwnership': 'BucketOwnerPreferred'\n",
-    "            },\n",
-    "        ]\n",
-    "    }\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "id": "d6547cf9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '861BAHHVDC9TTGQM',\n",
-       "  'HostId': 'm/m+P350joT64rCHGTsSHb0FcqkW49dYqAWLehDjIcxyhZnLCgzly+O+l1QSR0YrjBj5Ce4veqQ=',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amz-id-2': 'm/m+P350joT64rCHGTsSHb0FcqkW49dYqAWLehDjIcxyhZnLCgzly+O+l1QSR0YrjBj5Ce4veqQ=',\n",
-       "   'x-amz-request-id': '861BAHHVDC9TTGQM',\n",
-       "   'date': 'Sun, 23 Jan 2022 11:22:06 GMT',\n",
-       "   'server': 'AmazonS3',\n",
-       "   'content-length': '0'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response"
+    "# B. 에러 케이스\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a38553b1",
+   "id": "4fde27a0",
    "metadata": {},
    "source": [
-    "# B 에러\n",
-    "\n",
-    "아래 스택 실행시에 에러 발생 함. 아래 처럼 수정하고 다시 S3 에 업로딩\n",
-    "https://s3.ap-southeast-2.amazonaws.com/mlops-gonsoomoon-sydney/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
+    "## B.1 sm-project-sc-portfolio.yaml 스택 실행시 에러\n",
+    "아래 스택 실행시에 에러 발생 함. \n",
     "\n",
     "Template error: Fn::Select cannot select nonexistent value at index 2\n",
     "\n",
@@ -1075,39 +1041,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7eb590fc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "00f45415",
+   "id": "03bc6c30",
    "metadata": {},
    "source": [
-    "## Project 실행시 에러"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "06ae9afa",
-   "metadata": {},
-   "source": [
-    "![lambda_error.png](img2/lambda_error.png)\n",
-    "\n",
-    "\n",
-    "## 해결\n",
-    "- AmazonSageMakerServiceCatalogProductsLaunchRole 에 LambdaFull 추가 함\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b07bdb9",
-   "metadata": {},
-   "source": [
-    "## 에러: seed-code/s3-fs-ingestion-v1.0.zip 생성시 전부 아티펙트를 포함하지 않음.\n",
+    "## B.2 에러: seed-code/s3-fs-ingestion-v1.0.zip 생성시 전부 아티펙트를 포함하지 않음.\n",
     "```\n",
     "Zipping MLOps project seed code\n",
     "147\t  adding: .ipynb_checkpoints/ (stored 0%)\n",
@@ -1138,15 +1076,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a02dd271",
+   "id": "e12d103c",
    "metadata": {},
    "source": [
-    "## 포트폴리오 및 프러덕트 배포시 에러"
+    "## B.3. 포트폴리오 및 프러덕트 배포시 에러\n",
+    "- 서율리젼에서 진행싱 ProductLaunchRoleConstraint 생성시에 에러 발생. 원인을 찾지 못함. \n",
+    "    - 시드니 리젼에서 실행하니 에러 발생 하지 않음. \n",
+    "    - 조금 더 원인 파악이 필요 함.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6edfb84d",
+   "id": "fbcee0bd",
    "metadata": {},
    "source": [
     "![error-deploy-portfolio-product.png](img2/error-deploy-portfolio-product.png)"
@@ -1154,40 +1095,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "5a995e37",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'AmazonSageMakerServiceCatalogProductsLaunchRole'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arn = 'arn:aws:iam::189546603447:role/service-role/AmazonSageMakerServiceCatalogProductsLaunchRole'\n",
-    "role_name = arn.split('/')[2]\n",
-    "role_name"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8babd9d2",
-   "metadata": {},
-   "source": [
-    "## 랭글러 에러\n",
-    "![wrangler_erro.png](img2/wrangler_error.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "8d0b54ca",
+   "id": "84aa4a94",
    "metadata": {},
    "outputs": [],
    "source": []
