--- a/notebooks/01-feature-store-ingest-pipeline.ipynb
+++ b/notebooks/01-feature-store-ingest-pipeline.ipynb
@@ -742,6 +742,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A. 에러 케이스 및 트러블 슈팅"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A.1. Project 실행시 에러"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![lambda_error.png](../img2/lambda_error.png)\n",
+    "\n",
+    "\n",
+    "## 해결\n",
+    "- AmazonSageMakerServiceCatalogProductsLaunchRole 에 LambdaFull 추가 함\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A.2 랭글러 에러\n",
+    "- 원본의 에러 발생은 데이터 소스가 달라서 밠생 함.\n",
+    "- [해결] 직접 데이터 랭글러 데이터 플로우를 생성하여 해결 함.\n",
+    "![wrangler_erro.png](../img2/wrangler_error.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -751,9 +786,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (Data Science)",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -765,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
