add table index

--- a/notebooks/01-feature-store-ingest-pipeline.ipynb
+++ b/notebooks/01-feature-store-ingest-pipeline.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 아키텍처 개요\n",
+    "# 1. 아키텍처 개요\n",
     "이 노트북은 [AWS 서비스 카탈로그](https://aws.amazon.com/servicecatalog), [SageMaker 프로젝트](https://docs.aws.amazon.com/sagemaker/latest/dg/sagemaker) 사용 방법을 보여줍니다. -projects-whatis.html) 및 [Pipelines](https://aws.amazon.com/sagemaker/pipelines/)를 사용하여 SageMaker Studio에서 재사용 가능하고 이식 가능한 구성 요소를 생성합니다.\n",
     "\n",
     "이 프로젝트는 S3 버킷에 업로드된 새 데이터 파일에서 트리거되는 [SageMaker Feature Store](https://aws.amazon.com/sagemaker/feature-store/)로의 기능 변환 및 수집을 자동화합니다. SageMaker 프로젝트는 필요한 모든 구성 요소를 생성하고 리소스 간의 모든 권한 및 링크를 설정합니다.\n",
@@ -23,14 +23,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 전제 조건\n",
-    "SageMaker 프로젝트 배포를 진행하려면 먼저 다음 리소스를 생성해야 합니다.\n",
-    "- 출력 노드를 포함하는 Data Wrangler `.flow` 파일. `.flow` 파일은 지정된 S3 접두사에 업로드해야 합니다.\n",
-    "- 데이터에서 추출한 피쳐를 저장할 피쳐 그룹\n",
-    "- SageMaker 프로젝트 포트폴리오 -> [초기 설정]으로 완료(../README.md#deploy-sagemaker-project-portfolio)\n",
-    "- 새 데이터 파일이 업로드될 S3 버킷\n",
+    "# 2. 전제 조건\n",
     "\n",
-    "이 모든 작업은 [`00-setup` 노트북](00-setup.ipynb)에서 수행됩니다. 이 노트북을 실행하기 전에 설정 노트북을 실행했는지 확인하십시오."
+    "## 2.1. 기본 리소스 생성 \n",
+    "- SageMaker 프로젝트 배포를 진행하려면 먼저 다음 리소스를 생성해야 합니다.\n",
+    "- 이 모든 작업은 [`00-setup` 노트북](00-setup.ipynb)에서 수행됩니다. 이 노트북을 실행하기 전에 설정 노트북을 실행했는지 확인하십시오.\n",
+    "    - 출력 노드를 포함하는 Data Wrangler `.flow` 파일. `.flow` 파일은 지정된 S3 접두사에 업로드해야 합니다.\n",
+    "    - 데이터에서 추출한 피쳐를 저장할 피쳐 그룹\n",
+    "    - SageMaker 프로젝트 포트폴리오 -> [초기 설정]으로 완료(../README.md#deploy-sagemaker-project-portfolio)\n",
+    "    - 새 데이터 파일이 업로드될 S3 버킷\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2. AmazonSageMakerServiceCatalogProductsLaunchRole 에 LambdaFull 추가\n",
+    "<div class=\"alert alert-info\"> 💡 <strong> AmazonSageMakerServiceCatalogProductsLaunchRole 에 AWSLambda_FullAccess 추가 함</strong></div>\n",
+    "\n",
+    "아래와 같이 IAM 콘솔로 이동하시고 AWSLambda_FullAccess 를 추가 하세요.\n",
+    "![add_lambda.png](img/add_lambda.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. 기본 변수 로딩"
    ]
   },
   {
@@ -142,6 +162,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "프로젝트 생성을 위한 아래 주요한 변수를 확인 하세요."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -170,26 +197,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## AmazonSageMakerServiceCatalogProductsLaunchRole 에 LambdaFull 추가\n",
-    "<div class=\"alert alert-info\"> 💡 <strong> AmazonSageMakerServiceCatalogProductsLaunchRole 에 AWSLambda_FullAccess 추가 함</strong></div>\n",
-    "\n",
-    "아래와 같이 IAM 콘솔로 이동하시고 AWSLambda_FullAccess 를 추가 하세요.\n",
-    "![add_lambda.png](img/add_lambda.png)"
+    "# 4. 데이터 로드 프로젝트 생성\n",
+    "- ⭐ Studio IDE(옵션 1)에서 프로젝트를 생성하거나 이 노트북에서 직접 프로그래밍 방식으로(옵션 2) 프로젝트를 생성할 수 있습니다. \n",
+    "- 옵션 2는 수동 입력이 필요하지 않으므로 권장됩니다. \n",
+    "    - 옵션 1은 프로젝트 매개변수에 대한 UX를 시연하기 위해 제공됩니다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 데이터 로드 프로젝트 생성\n",
-    "⭐ Studio IDE(옵션 1)에서 프로젝트를 생성하거나 이 노트북에서 직접 프로그래밍 방식으로(옵션 2) 프로젝트를 생성할 수 있습니다. 옵션 2는 수동 입력이 필요하지 않으므로 권장됩니다. 옵션 1은 프로젝트 매개변수에 대한 UX를 시연하기 위해 제공됩니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 옵션 1: Studio에서 프로젝트 만들기\n",
+    "## 4.1. 옵션 1: Studio에서 프로젝트 만들기\n",
     "\n",
     "1. **SageMaker 리소스** 위젯에서 **프로젝트**를 선택합니다.\n",
     "\n",
@@ -305,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 옵션 2: 코드로 프로젝트 생성 - 권장\n",
+    "## 4.2 옵션 2: 코드로 프로젝트 생성 - 권장\n",
     "<div class=\"alert alert-info\"> 💡 <strong> Studio IDE를 통해 프로젝트를 만든 경우 이 섹션을 건너뛰세요. </strong>"
    ]
   },
@@ -516,24 +534,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 데이터 수집 프로젝트 작업"
+    "# 5. 데이터 수집 프로젝트 분석"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 프로젝트 리소스\n",
-    "프로젝트 템플릿은 자동화된 데이터 변환 및 수집에 필요한 모든 리소스를 생성합니다.\n",
+    "## 5.1. 프로젝트 템플릿은 자동화된 데이터 변환 및 수집에 필요한 모든 리소스를 생성\n",
     "- 지정된 S3 접두사에 새 데이터가 업로드될 때마다 AWS Lambda 함수를 시작하기 위한 [EventBridge 규칙](https://docs.aws.amazon.com/eventbridge/latest/userguide/eb-rules.html)\n",
     "- SageMaker 파이프라인을 시작하는 AWS Lambda 함수\n",
     "- DataWrangler 프로세서를 사용하여 처리 작업을 실행하는 SageMaker 파이프라인\n",
     "- 업로드된 '.flow' 파일을 데이터 변환 워크플로와 함께 사용하는 DataWrangler 프로세서\n",
     "\n",
-    "### 시드 코드가 있는 CodeCommit 리포지토리\n",
-    "파이프라인 생성 및 파이프라인 파라미터 구성을 위한 모든 소스 코드는 [AWS CodeCommit](https://aws.amazon.com/codecommit/) 리포지토리로 제공됩니다. 코드는 완벽하게 작동하며 즉시 사용할 수 있습니다. 이 코드를 소유하고 요구 사항에 따라 파이프라인의 구성 또는 매개변수를 변경할 수 있습니다.\n",
-    "\n",
-    "코드 작업을 시작하려면 저장소를 Studio 사용자의 홈 디렉토리에 복제해야 합니다.\n",
+    "## 5.2 시드 코드가 있는 CodeCommit 리포지토리\n",
+    "- 파이프라인 생성 및 파이프라인 파라미터 구성을 위한 모든 소스 코드는 [AWS CodeCommit](https://aws.amazon.com/codecommit/) 리포지토리로 제공됩니다. \n",
+    "    - 코드는 완벽하게 작동하며 즉시 사용할 수 있습니다. 이 코드를 소유하고 요구 사항에 따라 파이프라인의 구성 또는 매개변수를 변경할 수 있습니다.\n",
+    "- 코드 작업을 시작하려면 저장소를 Studio 사용자의 홈 디렉토리에 복제해야 합니다.\n",
     "\n",
     "<img src=\"../img/studo-project-clone-repo.png\" alt=\"studo-project-clone-repo\" width=\"800\"/>\n",
     "\n",
@@ -592,7 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SageMaker 파이프라인\n",
+    "## 5.3. SageMaker 파이프라인\n",
     "- 이 프로젝트는 Data Wrangler 프로세서를 사용한 하나의 처리 단계로 구성된 SageMaker 파이프라인을 제공합니다. \n",
     "- 파이프라인은 지정된 Data Wrangler `.flow` 파일에 포함된 변환을 수행하고 피쳐 저장소의 지정된 피쳐 그룹에서 변환된 피쳐를 수집합니다.\n",
     "- 이 파이프라인은 지정된 S3 위치에 새 파일이 업로드될 때마다 Lambda 함수에 의해 시작됩니다. \n",
@@ -614,19 +631,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 자동화 파이프라인 테스트\n",
+    "# 6. 자동화 파이프라인 테스트\n",
     "\n",
     "배포된 데이터 변환 및 피쳐 저장소 수집 파이프라인을 테스트하려면 다음 단계를 수행하십시오.\n",
     "1. 모니터링되는 S3 접두사 위치에 데이터 파일을 업로드합니다. 그러면 데이터 파이프라인을 통해 데이터 변환 및 수집이 시작됩니다.\n",
     "1. 파이프라인 실행 모니터링\n",
     "1. 피쳐 그룹에 로드된 데이터 확인"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 데이터를 S3 버킷에 업로드"
    ]
   },
   {
@@ -650,6 +660,13 @@
    "source": [
     "람다 함수는 파이프라인을 실행 함\n",
     "![run-pipeline-lambda.png](img/run-pipeline-lambda.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.1. 데이터를 S3 버킷에 업로드"
    ]
   },
   {
@@ -682,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 파이프라인 실행을 모니터링"
+    "## 6.2. 파이프라인 실행을 모니터링"
    ]
   },
   {
@@ -844,7 +861,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 불러온 데이터 확인\n",
+    "## 6.3. 불러온 데이터 확인\n",
     "실행이 완료되면 데이터가 피쳐 그룹에 로드되었는지 확인할 수 있습니다."
    ]
   },
@@ -1243,36 +1260,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Release resources"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%html\n",
-    "\n",
-    "<p><b>Shutting down your kernel for this notebook to release resources.</b></p>\n",
-    "<button class=\"sm-command-button\" data-commandlinker-command=\"kernelmenu:shutdown\" style=\"display:none;\">Shutdown Kernel</button>\n",
-    "        \n",
-    "<script>\n",
-    "try {\n",
-    "    els = document.getElementsByClassName(\"sm-command-button\");\n",
-    "    els[0].click();\n",
-    "}\n",
-    "catch(err) {\n",
-    "    // NoOp\n",
-    "}    \n",
-    "</script>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Proceed to the [`99-clean-up` notebook](99-clean-up.ipynb)."
+    "## 7. Next\n",
+    " [`99-clean-up` notebook](99-clean-up.ipynb) 로 이동하셔서 리소스를 제거 하세요."
    ]
   },
   {
