edit table index

--- a/notebooks/01-feature-store-ingest-pipeline.ipynb
+++ b/notebooks/01-feature-store-ingest-pipeline.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Amazon S3 버킷에서 SageMaker Feature Store로 자동화된 데이터 변환 및 수집"
+    "# Amazon S3 버킷에서 SageMaker Feature Store로 자동화된 데이터 변환 및 수집\n",
+    "\n",
+    "이 노트북은 다음과 같은 작업을 합니다.\n",
+    "\n",
+    "1. 아키텍처 개요\n",
+    "2. 전제 조건\n",
+    "3. 기본 변수 로딩\n",
+    "    - S3 data prefix to monitor : CSV 가 업로드가 되는 S3 Prefix\n",
+    "    - Data Wrangler flow URL\n",
+    "    - Data Wrangler output name\n",
+    "    - Feature group name\n",
+    "4. 세이지 메이커 사용자 템플릿을 통한 프로젝트 생성\n",
+    "5. 세이지 메이커 사용자 템플릿을 통한 프로젝트 분석 (데이타 수집 프로젝트)\n",
+    "6. 자동화 파이프라인 테스트\n",
+    "    - 지정된 S3 Prefix 에 CSV 를 업로딩하여 파이브라인을 자동으로 실행\n",
+    "7. 피쳐 스토어에서 데이터 확인\n",
+    "---"
    ]
   },
   {
@@ -197,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. 데이터 로드 프로젝트 생성\n",
+    "# 4. 세이지 메이커 사용자 템플릿을 통한 프로젝트 생성\n",
     "- ⭐ Studio IDE(옵션 1)에서 프로젝트를 생성하거나 이 노트북에서 직접 프로그래밍 방식으로(옵션 2) 프로젝트를 생성할 수 있습니다. \n",
     "- 옵션 2는 수동 입력이 필요하지 않으므로 권장됩니다. \n",
     "    - 옵션 1은 프로젝트 매개변수에 대한 UX를 시연하기 위해 제공됩니다."
@@ -534,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. 데이터 수집 프로젝트 분석"
+    "# 5. 세이지 메이커 사용자 템플릿을 통한 프로젝트 분석 (데이타 수집 프로젝트)"
    ]
   },
   {
@@ -861,7 +877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.3. 불러온 데이터 확인\n",
+    "## 7. 피쳐 스토어에서 데이터 확인\n",
     "실행이 완료되면 데이터가 피쳐 그룹에 로드되었는지 확인할 수 있습니다."
    ]
   },
@@ -1260,7 +1276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Next\n",
+    "## 8. Next\n",
     " [`99-clean-up` notebook](99-clean-up.ipynb) 로 이동하셔서 리소스를 제거 하세요."
    ]
   },
