--- a/notebooks/00-setup.ipynb
+++ b/notebooks/00-setup.ipynb
@@ -6,6 +6,14 @@
    "source": [
     "# 데이터 변환 및 수집 워크플로를 위한 설정 환경\n",
     "이 노트북은 데이터 변환 및 수집 워크플로를 프로비저닝하는 사용자 지정 SageMaker 프로젝트에 필요한 리소스와 매개변수를 설정합니다.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. 아키텍쳐 개요\n",
     "\n",
     "<img src=\"../design/solution-functional-view.drawio.svg\" style=\"background-color:white;\" alt=\"solution overview\" width=\"800\"/>\n",
     "\n",
@@ -22,6 +30,13 @@
     "⭐ 특정 사용 사례 및 요구 사항에 따라 고유한 사용자 지정 프로젝트의 경우 프로젝트 프로비저닝의 일부로 이러한 모든 리소스를 생성하는 것을 고려할 수 있습니다.\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. 기본 변수 설정 "
    ]
   },
   {
@@ -57,29 +72,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored variables and their in-db values:\n"
-     ]
-    }
-   ],
-   "source": [
-    "%store -r\n",
-    "%store"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
-    "### `domain_id` and `execution_role` 얻기"
+    "## 2.1. `domain_id` and `execution_role` 얻기\n",
+    "- 세이지 메이커 스튜디오의 domain_id 및 스튜디오 실행을 하는 execution_role 가져옵니다."
    ]
   },
   {
@@ -132,8 +130,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 데이터용 S3 버킷 가져오기\n",
-    "모든 솔루션 아티팩트 및 데이터를 저장하기 위해 SageMaker 기본 버킷을 사용합니다. 고유한 버킷을 생성하거나 사용하도록 선택할 수 있습니다. SageMaker 실행 역할 및 `AmazonSageMakerServiceCatalogProductsUseRole` 역할에 연결된 해당 권한이 있는지 확인하여 객체를 나열하고 읽고 버킷에 넣을 수 있습니다."
+    "## 2.2. 데이터용 S3 버킷 가져오고 변수 설정\n",
+    "- 모든 솔루션 아티팩트 및 데이터를 저장하기 위해 SageMaker 기본 버킷을 사용합니다. 고유한 버킷을 생성하거나 사용하도록 선택할 수 있습니다. \n",
+    "- SageMaker 실행 역할 및 `AmazonSageMakerServiceCatalogProductsUseRole` 역할에 연결된 해당 권한이 있는지 확인하여 객체를 나열하고 읽고 버킷에 넣을 수 있습니다."
    ]
   },
   {
@@ -170,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "⭐ You can keep the following literals set to their default values or change them if you would like."
+    "⭐ 다음 변수의 기본값을 유지하거나 원하는 경우 변경할 수 있습니다."
    ]
   },
   {
@@ -192,25 +191,6 @@
     "s3_flow_prefix = f\"{data_bucket}/feature-store-ingestion-pipeline/dw-flow/\"\n",
     "s3_fs_query_output_prefix = f\"{data_bucket}/feature-store-ingestion-pipeline/fs_query_results/\"\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\"> 💡 <strong>아래의 데이터 랭글러 흐름 생성시에 이름을 바꿀 예정입니다. **dw2-flow** 로 이름을 수정해주세요.</strong>\n",
-    "</div>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dw_flow_name = \"dw2-flow\" # 원하시는 이름으로 수정 해주세요.\n",
-    "# dw_flow_name = \"dw-flow\" # change to your custom file name if you use a different one"
    ]
   },
   {
@@ -239,7 +219,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 데이터세트 다운로드\n",
+    "## 2.3 데이타 랭글러 흐름 이름 설정\n",
+    "<div class=\"alert alert-info\"> 💡 <strong>데이터 랭글러 흐름 생성시에 이름을 바꿀 예정입니다. dw2-flow 로 이름을 기억 해주세요.</strong>\n",
+    "</div>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dw_flow_name = \"dw2-flow\" # 원하시는 이름으로 수정 해주세요.\n",
+    "# dw_flow_name = \"dw-flow\" # change to your custom file name if you use a different one"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. 데이터 세트 준비"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1. 데이터세트 다운로드\n",
     "이 솔루션에서는 잘 알려진 [Abalone dataset](https://www.csie.ntu.edu.tw/~cjlin/libsvmtools/datasets/regression.html#abalone)을 사용합니다. 데이터 세트에는 4177개의 데이터 행과 8개의 기능이 있습니다.\n",
     "\n",
     "Dua, D. 및 Graff, C. (2019). UCI 기계 학습 저장소 [http://archive.ics.uci.edu/ml]. 캘리포니아 어바인: 캘리포니아 대학교 정보 및 컴퓨터 과학 학교."
@@ -468,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 데이터세트를 로컬에 저장하고 S3에 업로드\n"
+    "## 3.2. 데이터세트를 로컬에 저장하고 S3에 업로드\n"
    ]
   },
   {
@@ -538,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 데이터 랭글러 흐름\n",
+    "# 4. 데이터 랭글러 흐름 (Flow) 생성\n",
     "- 여기서는 직접 작성을 합니다. 원문에 미리 만들어진 dw-flow.flow 사용시에는 이미 소스가 원작자의 경로로 지정되어 있기에 에러가 발생 합니다.\n"
    ]
   },
@@ -546,10 +553,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 데이터 랭글러 흐름 만들기\n",
+    "## 4.1.  데이터 랭글러 흐름 만들기\n",
     "\n",
-    "<div class=\"alert alert-info\"> 💡 <strong>Data Wrangler 흐름 생성은 선택 사항입니다.</strong>\n",
-    "</div>\n",
     "\n",
     "이 단계별 지침에 따라 새 Data Wrangler 흐름을 만들고 흐름에 데이터 변환 단계를 추가하십시오. 자세한 내용은 [데이터 랭글러 문서](https://docs.aws.amazon.com/sagemaker/latest/dg/data-wrangler.html)를 참조하십시오.\n",
     "\n",
@@ -637,14 +642,11 @@
     "\n",
     "12. 데이터 랭글러 흐름을 저장합니다. **파일**을 선택한 다음 **데이터 랭글러 흐름 저장**을 선택합니다.\n",
     "\n",
-    "**데이터 흐름으로 돌아가기**를 클릭하고 **내보내기** 탭으로 이동합니다.\n",
+    "**데이터 흐름으로 돌아가기**를 클릭하고 (1) 아래와 같이 \"Step(3)\"의 박스를 클릭, (2) \"3 Custom Pandas 옆의 : \" 클릭, (3) \"Export to\" 클릭, (4) SageMaker Feature Store (via Jupyter Notebook) 클릭 합니다.\n",
     "\n",
-    "Data Wrangler 흐름의 마지막 단계를 선택합니다.\n",
-    "<img src=\"../img/data-wrangler-export.png\" width=\"400\"/>\n",
     "\n",
-    "**단계 내보내기**를 선택하고 **기능 저장소** 내보내기 옵션을 선택합니다.\n",
+    "<img src=\"img/dw-export-new-ui.png\" width=\"600\"/>\n",
     "\n",
-    "<img src=\"../img/data-wrangler-export-step.png\" width=\"600\"/>\n",
     "\n",
     "13. 새로 생성된 노트북이 새 창에서 열립니다. 노트북에서 **Output: Feature Store** 섹션으로 이동하여 `output_name` 변수를 찾습니다.\n",
     "\n",
@@ -660,9 +662,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 출력 이름 설정\n",
-    "Data Wrangler 프로세서는 마지막 변환 단계의 'node_id'가 필요하며, 그 후에 변환된 데이터는 출력 대상으로 내보내집니다.\n",
-    "고유한 Data Wrangler 흐름을 생성했거나 흐름에 더 많은 변환 단계를 추가한 경우 12단계와 13단계의 이전 섹션에서 설명한 대로 `dw_output_name`을 올바른 `node_id` 값으로 설정해야 합니다. 그렇지 않으면 다음 코드 셀을 실행하세요. ."
+    "## 4.2. 출력 이름 설정\n",
+    "- 추후에 사용할 Data Wrangler 프로세서는 마지막 변환 단계의 'node_id'가 필요하며, 그 후에 변환된 데이터는 출력 대상으로 내보내집니다.\n",
+    "- 고유한 Data Wrangler 흐름을 생성했거나 흐름에 더 많은 변환 단계를 추가한 경우 12단계와 13단계의 이전 섹션에서 설명한 대로 `dw_output_name`을 올바른 `node_id` 값으로 설정해야 합니다. 그렇지 않으면 다음 코드 셀을 실행하세요. "
    ]
   },
   {
@@ -683,7 +685,6 @@
     "# Set the dw_output_name to your export node_id, otherwise keep None if you use the provided flow\n",
     "dw_output_name = None\n",
     "\n",
-    "\n",
     "if dw_output_name is None:\n",
     "    flow_content = json.loads(open(f\"{dw_flow_name}.flow\").read())\n",
     "    dw_output_name = f\"{flow_content['nodes'][len(flow_content['nodes'])-1]['node_id']}.default\"\n",
@@ -696,8 +697,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Upload DataWrangler flow to S3 bucket\n",
-    "Finally, we upload the Data Wrangler flow to the S3 bucket. The data processing pipeline uses this flow file to run the data transformation."
+    "## 4.3. S3 버킷에 DataWrangler 흐름 업로드\n",
+    "마지막으로 Data Wrangler 흐름을 S3 버킷에 업로드합니다. 데이터 처리 파이프라인은 이 흐름 파일을 사용하여 데이터 변환을 실행합니다."
    ]
   },
   {
@@ -730,11 +731,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 피쳐 그룹 생성\n",
+    "# 5. 피쳐 스토어"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- 데이터 피쳐를 저장하려면 SageMaker 피쳐 저장소에 새 피쳐 그룹을 생성해야 합니다. 피쳐 그룹의 각 피쳐는 지정된 데이터 유형과 이름이 있습니다.\n",
     "- 피쳐 그룹의 단일 레코드는 데이터 프레임의 행에 해당합니다. \n",
     "- SageMaker 피쳐 저장소에 대해 자세히 알아보려면 다음을 참조하십시오.\n",
     "    - [Amazon Feature Store 설명서](http://docs.aws.amazon.com/sagemaker/latest/dg/feature-store.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.1 레코드 식별자 및 시간 피쳐 이름 선택"
    ]
   },
   {
@@ -757,6 +771,13 @@
     "record_time_feature_name = 'record_time'\n",
     "if record_time_feature_name is None:\n",
     "   raise SystemExit(\"Select a column name as the event time feature name.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.2. 피쳐 이름 및 데이터 유형 정의"
    ]
   },
   {
@@ -788,6 +809,14 @@
     "        \"shell_weight\":\"float\",\n",
     "        \"rings\":\"long\"\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.3. sex 컬럼 변경\n",
+    "- 데이터 랭글러의 변환 작업에서 원핫 인코딩을 사용하여 Sex 관련 세 개의 컬럼을 생성 하였습니다. 이를 반영하기 위해서 기존 Sex 를 제거하고, 3개의 컬럼을 생성 합니다."
    ]
   },
   {
@@ -825,6 +854,14 @@
     "    columns[f\"sex_{i}\"] = \"float\"\n",
     "\n",
     "columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.4. 피쳐 스토어에 맞는 데이터 타입으로 변경 \n",
+    "- 위의 정의된 데이터 타입(예: float) 를 피쳐 스토어에서 제공하는 데이터 타입에 맞게 변한 합니다."
    ]
   },
   {
@@ -912,7 +949,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "일부 리터럴 정의:"
+    "## 5.5. 피쳐 그룹 이름, 기타 변수 정의 및 피쳐 그룹 생성"
    ]
   },
   {
@@ -1009,7 +1046,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"> 💡 <strong> AccessDenied 예외 처리 </strong></div>\n",
+    "<div class=\"alert alert-info\"> 💡 <strong> AccessDenied 예외 처리에 대한 처리 방법 </strong></div>\n",
     "\n",
     "- 피쳐 그룹 생성 시 `sagemaker_featurestore` 데이터베이스에 대한 Lake Formation 권한으로 인해 발생할 수 있습니다.\n",
     "- Lake Formation의 SageMaker 실행 역할(또는 피쳐 저장소에 액세스하는 데 사용하는 역할)에 해당 데이터베이스에 대한 권한을 부여해야 합니다."
@@ -1019,7 +1056,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 피쳐 그룹의 쿼리 데이터\n",
+    "## 5.6. 피쳐 그룹의 쿼리 데이터\n",
     "피쳐 생성 시 피쳐 저장소의 피쳐 그룹은 비어 있으며 데이터가 포함되어 있지 않습니다. **SageMaker 리소스** 위젯에서 **피쳐 저장소**를 선택하여 피쳐 그룹 메타 데이터를 탐색할 수 있습니다.\n",
     "\n",
     "<img src=\"../img/studio-feature-store.png\" width=\"400\"/>\n",
@@ -1201,7 +1238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 매개변수 저장\n",
+    "# 6. 매개변수 저장\n",
     "`%store` 매직을 사용하여 데이터 변환 및 수집 파이프라인에 대한 매개변수를 저장합니다. 다음 노트북에서 이 매개변수를 사용할 것입니다."
    ]
   },
@@ -1256,6 +1293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 7. Next\n",
     "다음 노트북으로 이동 하세요 [`01-feature-store-ingest-pipeline` notebook](01-feature-store-ingest-pipeline.ipynb)."
    ]
   },
