--- a/notebooks/00-setup.ipynb
+++ b/notebooks/00-setup.ipynb
@@ -4,9 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 데이터 변환 및 수집 워크플로를 위한 설정 환경\n",
-    "이 노트북은 데이터 변환 및 수집 워크플로를 프로비저닝하는 사용자 지정 SageMaker 프로젝트에 필요한 리소스와 매개변수를 설정합니다.\n",
-    "\n"
+    "# [모듈 00] 데이터 변환 및 수집 워크플로를 위한 설정 환경\n",
+    "- 이 노트북은 데이터 변환 및 수집 워크플로를 프로비저닝하는 사용자 지정 SageMaker 프로젝트에 필요한 리소스와 매개변수를 설정합니다.\n",
+    "- 특정 사용 사례 및 요구 사항에 따라 고유한 사용자 지정 프로젝트의 경우 프로젝트 프로비저닝의 일부로 이러한 모든 리소스를 생성하는 것을 고려할 수 있습니다.\n",
+    "\n",
+    "노트북은 필수 리소스를 생성하기 위한 다음 활동을 안내합니다.\n",
+    "\n",
+    "1. 아키텍쳐 개요\n",
+    "2. 기본 변수 설정\n",
+    "    - 데이터 업로드를 위한 Amazon S3 버킷 가져오기\n",
+    "    - 데이타 랭글러 흐름 이름 설정 \n",
+    "3. 데이터 세트 준비\n",
+    "    - 데이터 세트 다운로드 및 데이터 탐색\n",
+    "4. 데이터 랭글러 흐름 (Flow) 생성\n",
+    "    - 데이터 변환 및 피쳐 수집을 위한 Amazon Data Wrangler 흐름 생성\n",
+    "5. 피쳐 스토어\n",
+    "    - 피쳐가 저장되는 피쳐 저장소에 새 피쳐 그룹 생성\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -20,15 +35,6 @@
     "1. Amazon S3 버킷에 업로드된 데이터 파일\n",
     "2. 데이터 처리 및 변환 프로세스 시작\n",
     "3. 추출, 처리 및 변환된 기능은 Feature Store에서 지정된 기능 그룹으로 수집됩니다.\n",
-    "\n",
-    "노트북은 필수 리소스를 생성하기 위한 다음 활동을 안내합니다.\n",
-    "- 데이터 업로드를 위한 Amazon S3 버킷 가져오기\n",
-    "- 데이터 세트 다운로드 및 데이터 탐색\n",
-    "- 데이터 변환 및 피쳐 수집을 위한 Amazon Data Wrangler 흐름 생성\n",
-    "- 피쳐가 저장되는 피쳐 저장소에 새 피쳐 그룹 생성\n",
-    "\n",
-    "⭐ 특정 사용 사례 및 요구 사항에 따라 고유한 사용자 지정 프로젝트의 경우 프로젝트 프로비저닝의 일부로 이러한 모든 리소스를 생성하는 것을 고려할 수 있습니다.\n",
-    "\n",
     "\n"
    ]
   },
