--- a/notebooks/01-feature-store-ingest-pipeline.ipynb
+++ b/notebooks/01-feature-store-ingest-pipeline.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Amazon S3 버킷에서 SageMaker Feature Store로 자동화된 데이터 변환 및 수집\n",
+    "# [모듈 01] Amazon S3 버킷에서 SageMaker Feature Store로 자동화된 데이터 변환 및 수집\n",
     "\n",
     "이 노트북은 다음과 같은 작업을 합니다.\n",
     "\n",
