--- a/1.1 Package-Catalog-Portfolio-Product.ipynb
+++ b/1.1 Package-Catalog-Portfolio-Product.ipynb
@@ -2,43 +2,39 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6bee8d7f",
+   "id": "861c290c",
    "metadata": {},
    "source": [
-    "# 설치 코드 리포\n",
-    "- https://github.com/aws-samples/amazon-sagemaker-reusable-components/blob/main/package-cfn.md\n",
+    "# [모듈 1.1] 패키징: 서비스 카탈로그 포트폴리오 및 프러덕트\n",
+    "## 부제: Package CloudFormation Templates\n",
     "\n",
-    "---\n",
-    "## 필수 권한\n",
-    "- S3FulllAccess\n",
-    "- CloudFullAccess\n",
-    "- IAMCreaterole\n",
-    "- CodeBuildFull\n",
-    "- LambdaFull\n",
-    "- ServiceCatalogFull"
+    "노트북은 필수 리소스를 생성하기 위한 다음 활동을 안내합니다.\n",
+    "\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3c43b27a",
+   "id": "0b7b44c6",
    "metadata": {},
    "source": [
-    "# 1.Package CloudFormation Templates"
+    "# 1. 사전 참고"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d6d280ac",
+   "id": "15da0a16",
    "metadata": {},
    "source": [
-    "## 1.0 참고: 코드 수정 \n",
+    "## 1.1 참고: 코드 수정 (원문 대비 변경 사항. 확인하시고 스킵하세요.)\n",
     "- cfn-templates/sm-project-sc-portfolio.yaml 파일을 아래와 같이 수정 함.\n",
     "    - Amazon SageMaker execution role 이름을 얻는데 에러가 발생을 하여 수정"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c0b050e8",
+   "id": "8c649579",
    "metadata": {},
    "source": [
     "Before:\n",
@@ -57,17 +53,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76a435df",
+   "id": "0ba7abf4",
    "metadata": {},
    "source": [
-    "## 1.1 S3 버킷 설정\n",
+    "## 2. S3 버킷 설정\n",
     "- 디폴트 버킷을 사용 합니다. 사용자 정의 버킷을 사용시에는 아래 코드를 수정해서 입력 해주시기 바랍니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d93264bc",
+   "id": "0f2dcd5a",
    "metadata": {},
    "outputs": [
     {
@@ -95,21 +91,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70986dc2",
+   "id": "5fb79acc",
    "metadata": {},
    "source": [
-    "## 1.2 source code zip file 생성\n",
+    "# 3. 소스 코드 준비"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cbc3a66",
+   "metadata": {},
+   "source": [
+    "## 3.1. Source code zip file 생성\n",
     "\n",
+    "- 제공된 Git 리파지토리에서 yaml, yml, sh, py 파일을 amazon-sagemaker-reusable-components.zip 로 압축하여 소스 코드를 준비 합니다.\n",
     "원문을 아래와 같이 `*.py` 를 추가 했습니다. 이렇지 않은 경우 에러 발생 합니다.\n",
-    "\n",
-    "- 원문: zip -r amazon-sagemaker-reusable-components.zip . -i \"*.yaml\" \"*.yml\" \"*.sh\"\n",
-    "- 수정: zip -r amazon-sagemaker-reusable-components.zip . -i \"*.yaml\" \"*.yml\" \"*.sh\" \"*.py\""
+    "- 참고:\n",
+    "    - 원문: zip -r amazon-sagemaker-reusable-components.zip . -i \"*.yaml\" \"*.yml\" \"*.sh\"\n",
+    "    - 수정: zip -r amazon-sagemaker-reusable-components.zip . -i \"*.yaml\" \"*.yml\" \"*.sh\" \"*.py\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "69ecd47f",
+   "id": "dc731094",
    "metadata": {},
    "outputs": [
     {
@@ -145,16 +150,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a43c4131",
+   "id": "125e48c2",
    "metadata": {},
    "source": [
-    "## 1.3 소스 코드 zip 파일 `amazon-sagemaker-reusable-components.zip`을 S3 버킷에 업로드합니다."
+    "## 3.2 소스 코드 zip 파일을 S3 버킷에 업로드\n",
+    "- 소스 코드 zip 파일 `amazon-sagemaker-reusable-components.zip`을 S3 버킷에 업로드합니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "659b4589",
+   "id": "327d6ad1",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b4ce7516",
+   "id": "2bce4a0f",
    "metadata": {},
    "outputs": [
     {
@@ -194,24 +200,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38e5b79c",
+   "id": "447365ac",
    "metadata": {},
    "source": [
-    "## 1.4 CloudFormation(CF) 템플릿: package-cfn.yaml 배포 파일 확인"
+    "# 4. package-cfn.yaml 배포 파일 확인"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8e23bfef",
+   "id": "a281d705",
    "metadata": {},
    "source": [
-    "### 1.4.1 CF 의 Output 확인"
+    "### 4.1 CF 의 Output 확인\n",
+    "- SMProjectSCPortfolioS3Uri 생성\n",
+    "- SMProjectSCPortfolioDeployLink 생성\n",
+    "- StartBuildCLICommand 생성"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6b6c7129",
+   "id": "0d067fcb",
    "metadata": {},
    "outputs": [
     {
@@ -239,15 +248,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8978236c",
+   "id": "22827ccb",
    "metadata": {},
    "source": [
-    "### 1.4.2 리소스 확인"
+    "### 4.2 리소스 확인"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "59c75871",
+   "id": "5dcbe095",
    "metadata": {},
    "source": [
     "#### StartBuildLambdaExecutionRole 생성\n",
@@ -257,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "1019efb5",
+   "id": "d05d098c",
    "metadata": {},
    "outputs": [
     {
@@ -300,17 +309,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b4f2dc6",
+   "id": "c5839aea",
    "metadata": {},
    "source": [
-    "#### StartBuildLambda 함수 생성\n",
+    "### 4.3. StartBuildLambda 함수 생성\n",
     "- `cb.start_build(projectName=event['ResourceProperties']['ProjectName'])` 실행"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6878a066",
+   "id": "8501d750",
    "metadata": {},
    "outputs": [
     {
@@ -359,17 +368,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "784445d0",
+   "id": "2f99053c",
    "metadata": {},
    "source": [
-    "#### StartBuild 및 CodeBuildServiceRole 생성\n",
+    "### 4.4. StartBuild 및 CodeBuildServiceRole 생성\n",
     "- CodeBuild 를 위한 커스텀 StartBuild 및 역할 생성"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d662223b",
+   "id": "38a3274d",
    "metadata": {},
    "outputs": [
     {
@@ -437,17 +446,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deb63a63",
+   "id": "b7f6d99e",
    "metadata": {},
    "source": [
-    "#### CfnTemplatePackageProject 생성\n",
-    "- buildspec-package-cfn.yml 실행"
+    "### 4.5. CfnTemplatePackageProject 생성\n",
+    "- 이 빌드 프로젝트는 buildspec-package-cfn.yml 실행 함."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "445c1776",
+   "id": "1f05ea11",
    "metadata": {},
    "outputs": [
     {
@@ -487,17 +496,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34aa6363",
+   "id": "8137095c",
    "metadata": {},
    "source": [
-    "#### buildspec-package-cfn.yml 확인\n",
-    "- buildspec-package-cfn.yml 실행"
+    "### 4.6. buildspec-package-cfn.yml 확인\n",
+    "```\n",
+    "./package-cfn.sh ${S3_BUCKET_NAME} ${DEPLOYMENT_REGION} 실행 함\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "f9baed18",
+   "id": "1c2f1026",
    "metadata": {},
    "outputs": [
     {
@@ -520,9 +531,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9be3cf72",
+   "metadata": {},
+   "source": [
+    "### 4.7. package-cfn.sh 확인\n",
+    "```\n",
+    "./package-cfn.sh ${S3_BUCKET_NAME} ${DEPLOYMENT_REGION} 실행 함\n",
+    "```\n",
+    "\n",
+    "- 이 셀은  아래의 주요한 파일을 Zip 으로 압축하고 S3에 업로딩 합니다.\n",
+    "    - (1) sm-project-sc-portfolio.yaml (카탈로그 포트폴리오 정의 파일)\n",
+    "    - (2) project-s3-fs-ingestion.yaml (카탈로그 프러덕트 정의 파일)\n",
+    "    - (3) 카탈로그 프러덕트 Seed 코드 (Pipeline 정의 등) 추가\n",
+    "    - (4) 지정된 S3 버킷에 위의 결과 파일을 업로드\n",
+    "\n",
+    "\n",
+    "- 아래 코드를 스키밍 하시고 실행 결과는 추후에 확인 함."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "95d7537c",
+   "id": "69338a69",
    "metadata": {},
    "outputs": [
     {
@@ -670,18 +701,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebc6a489",
+   "id": "9cea05dd",
    "metadata": {},
    "source": [
-    "## 1.5 CloudFormation 템플릿을 배포합니다.\n",
+    "# 5. package-cfn.yaml (CloudFormation 템플릿) 을 배포\n",
     "- sm-project-sc-portfolio.yaml 생성\n",
     "- seed-code/s3-fs-ingestion-v1.0.zip 생성"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b113e6d3",
+   "metadata": {},
+   "source": [
+    "## 5.1. 클라우드 포메이션 실행\n",
+    "- 약 3분 정도 소요 됩니다.\n",
+    "- Cloud Formation 콘솔로 가서 진행 사항을 확인할 수 있습니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "2f56a529",
+   "id": "5ea17e71",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "89a7148b",
+   "id": "e34c5c54",
    "metadata": {},
    "outputs": [
     {
@@ -736,10 +777,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "253f2a85",
+   "id": "d504767e",
    "metadata": {},
    "source": [
-    "## 1.6 CloudFormation 템플릿 실행 결과\n",
+    "## 5.2. CloudFormation 템플릿 실행 결과\n",
     "- 두개의 중요한 Output 이 출력 됩니다.\n",
     "    - 카탈로그 포트폴리오 정의하는 CF: `sm-project-sc-portfolio.yaml` \n",
     "    - 카탈로그 포트폴리오 정의 링크:  SMProjectSCPortfolioDeployLink"
@@ -747,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29375ea0",
+   "id": "ddf616a6",
    "metadata": {},
    "source": [
     "예시: \n",
@@ -761,16 +802,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6bd4664",
+   "id": "c8ee6fda",
    "metadata": {},
    "source": [
-    "## 1.7 CloudFormation 템플릿 실행 과정\n",
-    "- 아래와 같이 CodeBuild \"CfnTemplatePackageProject-acyQl0hj9nBO\" 프로젝트가 실행이 되었습니다."
+    "## 5.2. package-cfn.yaml (CloudFormation 템플릿) 실행 과정\n",
+    "- 아래와 같이 CodeBuild (예: \"CfnTemplatePackageProject-acyQl0hj9nBO\") 코드 빌드 프로젝트가 실행이 되었습니다."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d11e14b1",
+   "id": "40d55d65",
    "metadata": {},
    "source": [
     "![cfn-template.png](img2/cfn-template.png)"
@@ -778,10 +819,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec0decc",
+   "id": "079b8e32",
    "metadata": {},
    "source": [
-    "## 1.8 \"package-cfn.sh\" 실행 결과\n",
+    "## 5.3. \"package-cfn.sh\" 실행 결과\n",
     "- 위의 CodeBuild는 실질적으로 \"package-cfn.sh\" 를 실행 하였습니다.\n",
     "- 아래의 로그는 다음과 같이 Zip 파일 생성 작업을 합니다.\n",
     "    - (1) sm-project-sc-portfolio.yaml (카탈로그 포트폴리오 정의 파일) \n",
@@ -816,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7142ae83",
+   "id": "3b90a145",
    "metadata": {},
    "source": [
     "![cfn-template-build-log.png](img2/cfn-template-build-log.png)"
@@ -824,16 +865,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b07449",
+   "id": "6e850ea2",
    "metadata": {},
    "source": [
-    "## 1.9 S3에 생성된 파일 확인"
+    "## 5.4. S3에 생성된 파일 확인"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5f8b9a46",
+   "id": "986d987a",
    "metadata": {},
    "outputs": [
     {
@@ -853,44 +894,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41644265",
+   "id": "646d726a",
    "metadata": {},
    "source": [
-    "# 2. 변수 저장"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "8527b00f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored 'bucket' (str)\n",
-      "Stored 'bucket_region' (str)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%store bucket\n",
-    "%store bucket_region"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "46ebda4f",
-   "metadata": {},
-   "source": [
-    "# 4. Add permissions to Service Catalog launch and SageMaker execution IAM roles"
+    "# 6. 서비스 카탈로그 런치 및 SageMaker 실행 IAM 역할에 권한 추가\n",
+    "- AmazonSageMakerServiceCatalogProductsLaunchRole 에 필요한 권한 부여\n",
+    "- SageMaker Studio 을 실행하는 역할에 권한 추가"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "698efd3c",
+   "id": "3dee1961",
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "631fbbc6",
+   "id": "a212b790",
    "metadata": {},
    "outputs": [
     {
@@ -964,34 +979,63 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7458834d",
+   "id": "d3c41e08",
    "metadata": {},
    "source": [
-    "# A. 트러블 슈팅 커맨드"
+    "# 7. 변수 저장\n",
+    "- 다음 노트북에서 사용할 변수 저장"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "59bbd33d",
+   "execution_count": 57,
+   "id": "976c53fe",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "download: s3://mlops-gonsoomoon-sydney/amazon-sagemaker-reusable-components/amazon-sagemaker-reusable-components.zip to ./amazon-sagemaker-reusable-components.zip\n"
+      "Stored 'bucket' (str)\n",
+      "Stored 'bucket_region' (str)\n"
      ]
     }
    ],
    "source": [
-    "! aws s3 cp s3://mlops-gonsoomoon-sydney/amazon-sagemaker-reusable-components/amazon-sagemaker-reusable-components.zip ."
+    "%store bucket\n",
+    "%store bucket_region"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4897b8b",
+   "metadata": {},
+   "source": [
+    "# 8. Next\n",
+    "- 다음 노트북 \"2.1 Deploy-Catalog-Portfolio-Product.ipynb\" 로 이동 하세요."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9713f9a4",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# A. 트러블 슈팅 커맨드 및 에러 케이스"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e277a13",
+   "metadata": {},
+   "source": [
+    "## A.1. 클라우드 포메이션 스택 진행 상황, 삭제 및 기타 명령어"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a022d8b3",
+   "id": "7abdcfbd",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1288,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "a3b4672e",
+   "id": "72d139d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,19 +1341,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 121,
-   "id": "b660e092",
+   "cell_type": "markdown",
+   "id": "b2d81dc6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "! aws cloudformation delete-stack --stack-name {SC_PORTFOLIO_STACK_NAME}\n"
+    "## A.2 S3 CLI 관련 명령어"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "13f7f2c1",
+   "id": "e5667395",
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "4d3e965f",
+   "id": "84b2daca",
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "ee5da515",
+   "id": "460c0048",
    "metadata": {},
    "outputs": [
     {
@@ -1370,136 +1412,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd6f7cc5",
+   "id": "264c7ff7",
    "metadata": {},
    "source": [
-    "## 버킷의 오너십 변경 \n",
-    "- 오브젝트를 Write 한 계정 보다는 버켓 소유자에게 오너십을 변경 함"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "id": "d4be9718",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import boto3\n",
+    "## A.3. 클라우드 포메이션 실행시 권한 에러\n",
+    "- 아래와 같은 필수 권한을 세이지 메이커 노트북을 실행하는 역할에 추가 해주세요.\n",
     "\n",
-    "client = boto3.client('s3')\n",
-    "\n",
-    "response = client.put_bucket_ownership_controls(\n",
-    "    Bucket= bucket,\n",
-    "    OwnershipControls={\n",
-    "        'Rules': [\n",
-    "            {\n",
-    "                'ObjectOwnership': 'BucketOwnerPreferred'\n",
-    "            },\n",
-    "        ]\n",
-    "    }\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "id": "09dea456",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '861BAHHVDC9TTGQM',\n",
-       "  'HostId': 'm/m+P350joT64rCHGTsSHb0FcqkW49dYqAWLehDjIcxyhZnLCgzly+O+l1QSR0YrjBj5Ce4veqQ=',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amz-id-2': 'm/m+P350joT64rCHGTsSHb0FcqkW49dYqAWLehDjIcxyhZnLCgzly+O+l1QSR0YrjBj5Ce4veqQ=',\n",
-       "   'x-amz-request-id': '861BAHHVDC9TTGQM',\n",
-       "   'date': 'Sun, 23 Jan 2022 11:22:06 GMT',\n",
-       "   'server': 'AmazonS3',\n",
-       "   'content-length': '0'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response"
+    "- S3FulllAccess\n",
+    "- CloudFullAccess\n",
+    "- IAMCreaterole\n",
+    "- CodeBuildFull\n",
+    "- LambdaFull\n",
+    "- ServiceCatalogFull"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c4d2ad76",
+   "id": "0760c37f",
    "metadata": {},
    "source": [
-    "# B 에러\n",
-    "\n",
-    "아래 스택 실행시에 에러 발생 함. 아래 처럼 수정하고 다시 S3 에 업로딩\n",
-    "https://s3.ap-southeast-2.amazonaws.com/mlops-gonsoomoon-sydney/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
-    "\n",
-    "Template error: Fn::Select cannot select nonexistent value at index 2\n",
-    "\n",
-    "```\n",
-    "AmazonSageMakerExecutionRoleName:\n",
-    "    Description: Name of the Amazon SageMaker execution role\n",
-    "    Value:\n",
-    "      Fn::Select:\n",
-    "      - 1 # 기존에 2 였음. 1로 변경 함\n",
-    "```\n",
-    "아래 파일을 다음과 같이 변경 \n",
-    "amazon-sagemaker-reusable-components/build/sm-project-sc-portfolio.yaml\n",
-    "```\n",
-    "Before:\n",
-    "  AmazonSageMakerExecutionRoleName:\n",
-    "    Description: Name of the Amazon SageMaker execution role\n",
-    "    Value: !Select [2, !Split ['/', !Ref SCPortfolioPrincipalRoleArn ] ] \n",
-    "```\n",
-    "```\n",
-    "After: \n",
-    "  AmazonSageMakerExecutionRoleName:\n",
-    "    Description: Name of the Amazon SageMaker execution role\n",
-    "    Value: !Select [1, !Split ['/', !Ref SCPortfolioPrincipalRoleArn ] ] \n",
-    "\n",
-    "\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c10b7da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11ff9214",
-   "metadata": {},
-   "source": [
-    "## Project 실행시 에러"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "25509ab5",
-   "metadata": {},
-   "source": [
-    "![lambda_error.png](img2/lambda_error.png)\n",
-    "\n",
-    "\n",
-    "## 해결\n",
-    "- AmazonSageMakerServiceCatalogProductsLaunchRole 에 LambdaFull 추가 함\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "550c6c09",
-   "metadata": {},
-   "source": [
-    "## 에러: seed-code/s3-fs-ingestion-v1.0.zip 생성시 전부 아티펙트를 포함하지 않음.\n",
+    "## A.4. 에러: seed-code/s3-fs-ingestion-v1.0.zip 생성시 전부 아티펙트를 포함하지 않음.\n",
     "```\n",
     "Zipping MLOps project seed code\n",
     "147\t  adding: .ipynb_checkpoints/ (stored 0%)\n",
@@ -1529,18 +1461,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "54e04eda",
-   "metadata": {},
-   "source": [
-    "## 랭글러 에러\n",
-    "![wrangler_error.png](img2/wrangler_error.png)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d5e6b3c",
+   "id": "e913f4d9",
    "metadata": {},
    "outputs": [],
    "source": []
